force-app/main/default/objects/NB2B_SAPOrderError__mdt/NB2B_SAPOrderError__mdt.object-meta.xml
<CustomObject>
    <label>NB2B_SAPOrderError</label>
    <pluralLabel>NB2B_SAPOrderErrors</pluralLabel>
</CustomObject>