force-app/main/default/objects/NB2B_SAPOrderError__mdt/fields/Block_Order__c.field-meta.xml
<CustomField>
    <fullName>Block_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Order</label>
    <type>Checkbox</type>
</CustomField>