force-app/main/default/objects/NB2B_SAPOrderError__mdt/fields/Display_Message__c.field-meta.xml
<CustomField>
    <fullName>Display_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Message</label>
    <type>Checkbox</type>
</CustomField>