force-app/main/default/objects/NB2B_SAPOrderError__mdt/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
                <default>true</default>
                <label>Warning</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>