force-app/main/default/objects/NB2B_SAPOrderError__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Service</fullName>
                <default>true</default>
                <label>From Service</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>