force-app/main/default/objects/NB2B_SAPOrderError__mdt/validationRules/CheckDisplayMessageAndBlockOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDisplayMessageAndBlockOrder</fullName>
    <active>true</active>
    <description>If it is a blocking order case then Display Message should be checked.</description>
    <errorConditionFormula>Block_Order__c &amp;&amp; !Display_Message__c</errorConditionFormula>
    <errorDisplayField>Display_Message__c</errorDisplayField>
    <errorMessage>If it is a blocking order case then Display Message should be checked.</errorMessage>
</ValidationRule>