force-app/main/default/objects/NB2B_SAPOrderError__mdt/validationRules/CheckMessageAndMessageType.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMessageAndMessageType</fullName>
    <active>true</active>
    <description>If Message Type is not &quot;From Service&quot; then you should specify into Message the Label api name or Text message literal.</description>
    <errorConditionFormula>!ISPICKVAL(Message_Type__c,&apos;From Service&apos;) &amp;&amp; ISBLANK(Message__c)</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>If Message Type is not &quot;From Service&quot; then you should specify into Message the Label api name or Text message literal.</errorMessage>
</ValidationRule>