force-app/main/default/objects/NB2B_SAPOrderError__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Block_Order__c</columns>
    <columns>Display_Message__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_GB</language>
</ListView>